# GOIT_Web_Module14_HW

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 04e7d28a58e8_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_reset_password.html  email_template.html
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
